# rabbitmq-asyncio-v2

./: Pipfile  README.md  pyproject.toml
rbmq-aio-client-v2/: pyproject.toml
rbmq-aio-client-v2/src/: setup.py  subscriber.py
rbmq-aio-client-v2/src/rbmq_aio_client_v2/: server.py
rbmq-aio-client-v2/src/rbmq_aio_client_v2.egg-info/: PKG-INFO
rbmq-aio-client-v2/tests/: test_publisher.py  test_subscriber.py
rbmq_aio_client_v2/: publisher.py  test_publisher.py  test_subscriber.py
src/: setup.py
src/rbmq_aio_client/: client.py  publisher.py  server.py  subscriber.py
src/rbmq_aio_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rbmq_aio_client_v2.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_publisher.py  test_subscriber.py
