[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rbmq_aio_client"]

[project]
name = "rbmq-aio-client"
version = "1.1.1"
authors = [
  { name="Rashmi Sahu", email="rashmi.sahu@junio.in" },
  { name="Nirbhay Gupta", email="nirbhay.gupta@junio.in" },
]
description = "Async rabbitmq project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    "addict==2.4.0",
    "aio-pika==9.4.3",
    "structlog"
]


[tool.pytest.ini_options]
addopts = "-rSA"
testpaths = [
  "tests"
]